src/objects/Drug_HRB__c.object
<CustomObject>
    <fields>
        <fullName>ANCHORID__c</fullName>
        <label>ANCHORID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrugCodeX__c</fullName>
        <label>DrugCodeX</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrugCode__c</fullName>
        <label>DrugCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_Number__c</fullName>
        <label>HRB ID Number</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Specify0__c</fullName>
        <label>Specify0</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specify1__c</fullName>
        <label>Specify1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tableyear2012__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tableyear2012</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>drugtype__c</fullName>
        <label>drugtype</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>euromaincode__c</fullName>
        <label>euromaincode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eurosubcode__c</fullName>
        <label>eurosubcode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Drug-HRB</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DrugCode__c</columns>
        <columns>DrugCodeX__c</columns>
        <columns>External_ID_Number__c</columns>
        <columns>Tableyear2012__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>DrugCode__c</columns>
        <columns>drugtype__c</columns>
        <columns>Specify1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Drug_Type_1</fullName>
        <columns>NAME</columns>
        <columns>DrugCode__c</columns>
        <columns>drugtype__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>drugtype__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Drug Type 1</label>
    </listViews>
    <listViews>
        <fullName>Drug_Type_2</fullName>
        <columns>NAME</columns>
        <columns>DrugCode__c</columns>
        <columns>drugtype__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>drugtype__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Drug Type 2</label>
    </listViews>
    <listViews>
        <fullName>Drug_Type_3</fullName>
        <columns>NAME</columns>
        <columns>DrugCode__c</columns>
        <columns>drugtype__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>drugtype__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>Drug Type 3</label>
    </listViews>
    <listViews>
        <fullName>Drug_Type_4</fullName>
        <columns>NAME</columns>
        <columns>DrugCode__c</columns>
        <columns>drugtype__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>drugtype__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>Drug Type 4</label>
    </listViews>
    <nameField>
        <label>Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drugs HRB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>